--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,12 @@
-:root {}
+:root {
+
+  --padding: 2em;
+  --font-size: 16px;
+  --font-color: rgb(245, 245, 245);
+
+  --black-main: rgb(43, 43, 43);
+  --green-main: #BAD868;
+}
 
 @media (prefers-color-scheme: dark) {}
 
@@ -14,11 +22,23 @@ body {
   overflow-x: hidden;
 }
 
-body {}
+body {
+  background: linear-gradient(135deg,
+      #1a1a1a 0%,
+      #1e1e1e 50%,
+      #1a1a1a 100%);
+}
+
+h1 {
+  text-transform: uppercase;
+}
 
 a {
   color: inherit;
   text-decoration: none;
+  font-weight: 800;
+  font-size: 1.4rem;
+  text-transform: uppercase;
 }
 
 @media (prefers-color-scheme: dark) {
