--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,8 +2,16 @@
   display: flex;
   min-height: 100vh;
   color: var(--font-color);
+  flex-direction: row;
+  padding: 2rem;
+}
+
+.Container {
+  width: 50%;
+  display: flex;
   flex-direction: column;
-  gap: 2rem;
+  justify-content: center;
+  align-items: center;
 }
 
 
