--- a/src/app/components/acts/Acts.module.css
+++ b/src/app/components/acts/Acts.module.css
@@ -4,34 +4,274 @@
     width: fit-content;
     height: fit-content;
     flex-wrap: wrap;
+    padding: 2rem 0;
+    align-items: center;
+    justify-content: center;
 }
 
+
 .Act {
+    position: relative;
+    padding: 0.5em 1em 0.5em 0;
+    color: var(--font-color);
     display: flex;
     align-items: center;
     gap: 1em;
-    padding: 1em 0 1em 1em;
+}
+
+.Link {
+    width: fit-content
+}
+
+.Link::after,
+.Link::before {
+    content: attr(data-glitch);
+    position: absolute;
+    top: 0;
     width: fit-content;
+    color: var(--green-main);
+    background-color: var(--black-main);
+    overflow: hidden;
+    clip: rect(1px, 1px, 0, 0);
+    height: 100%;
+    font-family: inherit;
 }
 
-.Act:hover a {
-    animation: shimmy 0.1s ease-in infinite;
+.Link:hover:before {
+    left: -2px;
+    animation: 5s linear infinite alternate-reverse noise-before;
 }
 
-@keyframes shimmy {
+.Link:hover:after {
+    left: 2px;
+    animation: 5s linear infinite alternate-reverse noise-after;
+}
+
+/* Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {}
+
+/* Mobile */
+@media (max-width: 768px) {
+    .ActContainer {
+        display: flex;
+        max-width: 100vw;
+        width: 100%;
+        height: fit-content;
+    }
+
+
+    .Act {
+        position: relative;
+        padding: 0.5em 1em 0.5em 0;
+        color: var(--font-color);
+        display: flex;
+        align-items: center;
+        gap: 1em;
+    }
+
+    .Link {
+        width: fit-content
+    }
+
+    .Link::after,
+    .Link::before {
+        content: attr(data-glitch);
+        position: absolute;
+        top: 0;
+        width: fit-content;
+        color: var(--green-main);
+        background-color: var(--black-main);
+        overflow: hidden;
+        clip: rect(1px, 1px, 0, 0);
+        height: 100%;
+        font-family: inherit;
+    }
+
+    .Link:hover:before {
+        left: -2px;
+        animation: 5s linear infinite alternate-reverse noise-before;
+    }
+
+    .Link:hover:after {
+        left: 2px;
+        animation: 5s linear infinite alternate-reverse noise-after;
+    }
+
+}
+
+/* Tablet and Smaller Desktop */
+@media (min-width: 768px) and (max-width: 1120px) {}
+
+@media (prefers-color-scheme: dark) {}
+
+@keyframes noise-before {
     0% {
-        transform: translateX(0)
+        clip: rect(189px, 9999px, 10px, 0);
     }
 
-    33% {
-        transform: translateX(2px)
+    5% {
+        clip: rect(22px, 9999px, 164px, 0);
     }
 
-    66% {
-        transform: translateX(-2px)
+    10% {
+        clip: rect(45px, 9999px, 131px, 0);
+    }
+
+    15% {
+        clip: rect(185px, 9999px, 13px, 0);
+    }
+
+    20% {
+        clip: rect(2px, 9999px, 199px, 0);
+    }
+
+    25% {
+        clip: rect(143px, 9999px, 73px, 0);
+    }
+
+    30% {
+        clip: rect(82px, 9999px, 4px, 0);
+    }
+
+    35% {
+        clip: rect(198px, 9999px, 93px, 0);
+    }
+
+    40% {
+        clip: rect(21px, 9999px, 180px, 0);
+    }
+
+    45% {
+        clip: rect(134px, 9999px, 1px, 0);
+    }
+
+    50% {
+        clip: rect(63px, 9999px, 187px, 0);
+    }
+
+    55% {
+        clip: rect(167px, 9999px, 12px, 0);
+    }
+
+    60% {
+        clip: rect(19px, 9999px, 175px, 0);
+    }
+
+    65% {
+        clip: rect(157px, 9999px, 88px, 0);
+    }
+
+    70% {
+        clip: rect(11px, 9999px, 193px, 0);
+    }
+
+    75% {
+        clip: rect(162px, 9999px, 7px, 0);
+    }
+
+    80% {
+        clip: rect(24px, 9999px, 153px, 0);
+    }
+
+    85% {
+        clip: rect(138px, 9999px, 40px, 0);
+    }
+
+    90% {
+        clip: rect(79px, 9999px, 136px, 0);
+    }
+
+    95% {
+        clip: rect(25px, 9999px, 34px, 0);
     }
 
     100% {
-        transform: translateX(0)
+        clip: rect(173px, 9999px, 166px, 0);
+    }
+}
+
+@keyframes noise-after {
+    0% {
+        clip: rect(26px, 9999px, 33px, 0);
+    }
+
+    5% {
+        clip: rect(140px, 9999px, 198px, 0);
+    }
+
+    10% {
+        clip: rect(184px, 9999px, 89px, 0);
+    }
+
+    15% {
+        clip: rect(121px, 9999px, 6px, 0);
+    }
+
+    20% {
+        clip: rect(181px, 9999px, 99px, 0);
+    }
+
+    25% {
+        clip: rect(154px, 9999px, 133px, 0);
+    }
+
+    30% {
+        clip: rect(134px, 9999px, 169px, 0);
+    }
+
+    35% {
+        clip: rect(26px, 9999px, 187px, 0);
+    }
+
+    40% {
+        clip: rect(147px, 9999px, 137px, 0);
+    }
+
+    45% {
+        clip: rect(31px, 9999px, 52px, 0);
+    }
+
+    50% {
+        clip: rect(191px, 9999px, 109px, 0);
+    }
+
+    55% {
+        clip: rect(74px, 9999px, 54px, 0);
+    }
+
+    60% {
+        clip: rect(145px, 9999px, 75px, 0);
+    }
+
+    65% {
+        clip: rect(153px, 9999px, 198px, 0);
+    }
+
+    70% {
+        clip: rect(99px, 9999px, 136px, 0);
+    }
+
+    75% {
+        clip: rect(118px, 9999px, 192px, 0);
+    }
+
+    80% {
+        clip: rect(1px, 9999px, 83px, 0);
+    }
+
+    85% {
+        clip: rect(145px, 9999px, 98px, 0);
+    }
+
+    90% {
+        clip: rect(121px, 9999px, 154px, 0);
+    }
+
+    95% {
+        clip: rect(156px, 9999px, 44px, 0);
+    }
+
+    100% {
+        clip: rect(67px, 9999px, 122px, 0);
     }
 }
