--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,8 +41,22 @@ a {
   text-transform: uppercase;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {}
+
+/* Mobile */
+@media (max-width: 768px) {
+  body {
+    overflow-y: scroll;
+    height: fit-content;
+  }
+
+  :root {
+    font-size: 14px;
   }
 }
+
+/* Tablet and Smaller Desktop */
+@media (min-width: 768px) and (max-width: 1120px) {}
+
+@media (prefers-color-scheme: dark) {}
