--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,14 +14,174 @@
   align-items: center;
 }
 
+.LeftSectionContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+  height: 100%;
+  width: 100%;
+
+}
+
+.RightSectionContent {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.Location {
+  margin: auto;
+  width: fit-content;
+  transition: transform 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955), color 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955), background-color 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+.Location:hover {
+  transform: scale(1.05);
+  background-color: var(--green-main);
+  color: var(--black-main)
+}
+
+.Location:hover svg path {
+  fill: var(--black-main) !important;
+}
+
+.Location:hover svg path[stroke] {
+  stroke: var(--black-main);
+}
+
+.Location a {
+  padding: 0.5rem 0.5rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.TitleContainer {
+  display: flex;
+  gap: 2em;
+  align-items: center;
+  flex-direction: column;
+}
+
+.TitleContainer * {
+  padding: 0;
+}
+
+.Year {
+  font-size: 2rem;
+
+}
+
+.Date {
+  font-size: 3rem;
+  padding: 0.8rem 1rem;
+  border-radius: 50px;
+  color: var(--black-main);
+  background-color: var(--green-main);
+}
+
+.Time {
+  font-size: 1rem;
+}
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {}
 
 /* Mobile */
-@media (max-width: 700px) {}
+@media (max-width: 768px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+
+  .Container {
+    width: 100%;
+    height: 100svh;
+  }
+
+  .LeftSectionContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    height: 100%;
+    width: 100%;
+
+  }
+
+  .RightSectionContent {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+  }
+
+  .Location {
+    margin: auto;
+    width: fit-content;
+    transition: transform 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955), color 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955), background-color 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  }
+
+  .Location:hover {
+    transform: scale(1.05);
+    background-color: var(--green-main);
+    color: var(--black-main)
+  }
+
+  .Location:hover svg path {
+    fill: var(--black-main) !important;
+  }
+
+  .Location:hover svg path[stroke] {
+    stroke: var(--black-main);
+  }
+
+  .Location a {
+    padding: 0.5rem 0.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+    font-size: 1rem;
+    font-weight: 300;
+  }
+
+  .TitleContainer {
+    display: flex;
+    gap: 1em;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .TitleContainer * {
+    padding: 0;
+  }
+
+  .Year {
+    font-size: 2rem;
+
+  }
+
+  .Date {
+    font-size: 3rem;
+    padding: 0.8rem 1rem;
+    border-radius: 50px;
+    color: var(--black-main);
+    background-color: var(--green-main);
+  }
+
+  .Time {
+    font-size: 1rem;
+  }
+}
 
 /* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {}
+@media (min-width: 768px) and (max-width: 1120px) {}
 
 @media (prefers-color-scheme: dark) {}
