--- a/src/app/components/button/Button.module.css
+++ b/src/app/components/button/Button.module.css
@@ -5,12 +5,12 @@
 
 .Button {
     position: relative;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 600;
     text-transform: uppercase;
-    padding: 0.8rem 0.8rem;
-    background-color: var(--green-main);
-    color: var(--black-main);
+    padding: 1rem;
+    background-color: var(--black-main);
+    color: var(--greed-main);
     outline: none;
     border: none;
     transition: transform 0.2s cubic-bezier(0.215, 0.610, 0.355, 1);
@@ -33,6 +33,8 @@
     transform: translateX(-50%);
     background-repeat: no-repeat;
     pointer-events: none;
+    background-size: 0% 0%;
+
 }
 
 .Button::before {
@@ -54,8 +56,6 @@
         url("../../../../public/logo.svg"),
         url("../../../../public/logo.svg"),
         url("../../../../public/logo.svg");
-    background-size: 55% 55%, 30% 30%, 45% 45%, 60% 60%, 48% 48%, 30% 30%, 35% 35%,
-        20% 20%, 28% 28%;
     background-position: center 160%;
     background-repeat: no-repeat;
 }
@@ -82,8 +82,7 @@
         url("../../../../public/logo.svg"),
         url("../../../../public/logo.svg"),
         url("../../../../public/logo.svg");
-    background-size: 55% 55%, 30% 30%, 45% 45%, 60% 60%, 48% 48%, 30% 30%, 35% 35%,
-        20% 20%, 28% 28%;
+
     background-position: center -60%;
     background-repeat: no-repeat;
 }
@@ -96,17 +95,22 @@
     0% {
         background-position: center 160%, center 160%, center 160%, center 160%, center 160%, center 160%,
             center 160%, center 160%, center 160%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%,
+            0% 0%, 0% 0%;
     }
 
     50% {
         background-position: 30% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%,
             50% 50%, 65% 20%, 90% 30%;
+        background-size: 55% 55%, 30% 30%, 45% 45%, 60% 60%, 48% 48%, 30% 30%, 35% 35%,
+            20% 20%, 28% 28%;
     }
 
     100% {
         background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%,
             50% 40%, 65% 10%, 90% -20%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%,
+            0% 0%, 0% 0%;
     }
 }
 
@@ -114,16 +118,21 @@
     0% {
         background-position: center -60%, center -60%, center -60%, center -60%, center -60%, center -60%,
             center -60%, center -60%, center -60%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%,
+            0% 0%, 0% 0%;
     }
 
     50% {
         background-position: 0% 30%, 0% 80%, 10% 60%, 20% 100%, 30% 70%, 22% 50%,
             50% 50%, 65% 80%, 90% 70%;
+        background-size: 55% 55%, 30% 30%, 45% 45%, 60% 60%, 48% 48%, 30% 30%, 35% 35%,
+            20% 20%, 28% 28%;
     }
 
     100% {
         background-position: 0% 40%, 0% 90%, 10% 70%, 20% 110%, 30% 80%, 22% 60%,
             50% 60%, 65% 90%, 90% 120%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%,
+            0% 0%, 0% 0%;
     }
 }
