--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,16 @@
+@font-face {
+  font-family: "GT America Bold";
+  src: url("/fonts/GT-America-Expanded-Bold-Trial.otf");
+}
+
 :root {
 
   --padding: 2em;
   --font-size: 16px;
   --font-color: rgb(245, 245, 245);
-
+  --title-font: "GT America Bold";
   --black-main: rgb(43, 43, 43);
-  --green-main: #BAD868;
+  --green-main: #CFFB51;
 }
 
 @media (prefers-color-scheme: dark) {}
@@ -22,7 +27,7 @@ body {
   overflow-x: hidden;
 }
 
-@keyframes gradientShift {
+/* @keyframes gradientShift {
   0% {
     background-position: 0% 50%;
   }
@@ -78,16 +83,10 @@ body {
   90% {
     transform: translate(10%, 5%);
   }
-}
+} */
 
 body {
-  background: linear-gradient(135deg,
-      #1a1a1a 0%,
-      #2c2c2c 25%,
-      #1e1e1e 50%,
-      #2c2c2c 75%,
-      #1a1a1a 100%);
-  background-size: 100% 100%;
+  background: black;
   animation: gradientShift 25s ease infinite;
   position: relative;
   overflow: hidden;
@@ -108,8 +107,16 @@ body::before {
   pointer-events: none;
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+button {
   text-transform: uppercase;
+  font-family: "GT America Bold";
 }
 
 a {
