--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -197,93 +197,105 @@
 @media (max-width: 768px) {
   .main {
     display: flex;
+    min-height: 100vh;
+    color: var(--font-color);
     flex-direction: column;
-    gap: 2rem;
+    padding: 0rem;
   }
-
 
   .Container {
+    padding: 0rem;
     width: 100%;
-    height: 100svh;
-  }
-
-  .LeftSectionContent {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    gap: 2rem;
-    height: 100%;
-    width: 100%;
-
+    align-items: center;
+    margin-bottom: 2rem;
+    min-height: 100vh;
   }
 
   .RightSectionContent {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    align-items: center;
+    border-left: none;
+    border-top: 3px solid var(--green-main);
+    padding: 2rem;
   }
 
-  .Location {
-    margin: auto;
-    width: fit-content;
-    transition: transform 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955), color 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955), background-color 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  .RightSectionContent::before {
+    top: 0;
+    left: 0;
+    border-left: 3px solid var(--green-main);
+    border-right: none;
+    padding: 0rem;
   }
 
-  .Location:hover {
-    transform: scale(1.05);
-    background-color: var(--green-main);
-    color: var(--black-main)
-  }
-
-  .Location:hover svg path {
-    fill: var(--black-main) !important;
-  }
-
-  .Location:hover svg path[stroke] {
-    stroke: var(--black-main);
-  }
-
-  .Location a {
-    padding: 0.5rem 0.5rem;
-    display: flex;
-    align-items: center;
-    gap: 0.5em;
-    font-size: 1rem;
-    font-weight: 300;
-  }
-
-  .TitleContainer {
-    display: flex;
-    gap: 1em;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .TitleContainer * {
-    padding: 0;
+  .TitleContainer::after {
+    width: 100%;
   }
 
   .Year {
     font-size: 2rem;
+    padding: 0rem;
+  }
 
+  .Year::after {
+    right: -2rem;
   }
 
   .Date {
-    font-size: 3rem;
-    padding: 0.8rem 1rem;
-    border-radius: 50px;
-    color: var(--black-main);
-    background-color: var(--green-main);
+    font-size: 2.5rem;
+    padding: 1rem;
   }
 
   .Time {
     font-size: 1rem;
   }
+
+
 }
 
 /* Tablet and Smaller Desktop */
-@media (min-width: 768px) and (max-width: 1120px) {}
+
+
+@media (min-width: 768px) and (max-width: 1120px) {
+  .main {
+    flex-direction: row;
+    padding: 2rem;
+  }
+
+  .Container {
+    width: 50%;
+    margin-bottom: 0;
+  }
+
+  .RightSectionContent {
+    border-left: 3px solid var(--green-main);
+    border-top: none;
+    padding: 2rem;
+  }
+
+  .RightSectionContent::before {
+    top: 0;
+    right: 0;
+    border-right: 3px solid var(--green-main);
+    border-left: none;
+  }
+
+  .Year {
+    font-size: 2.5rem;
+  }
+
+  .Year::after {
+    right: -4rem;
+  }
+
+  .Date {
+    font-size: 3rem;
+    padding: 0.5rem 1rem;
+  }
+
+  .Time {
+    font-size: 1.2rem;
+  }
+}
 
 @media (prefers-color-scheme: dark) {}
