--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -29,7 +29,6 @@
   flex-direction: column;
   gap: 2rem;
   padding: 2rem;
-  border-left: 3px solid var(--green-main);
   position: relative;
 }
 
@@ -199,8 +198,8 @@
     display: flex;
     min-height: 100vh;
     color: var(--font-color);
-    flex-direction: column;
-    padding: 0rem;
+    flex-direction: column-reverse;
+    padding: 10rem 0 0 0;
   }
 
   .Container {
@@ -211,20 +210,26 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 2rem;
-    min-height: 100vh;
+
+  }
+
+  .LeftSectionContent {
+
+
+    min-height: 1vh;
   }
 
   .RightSectionContent {
     border-left: none;
     border-top: 3px solid var(--green-main);
     padding: 2rem;
+    min-height: 100vh;
   }
 
   .RightSectionContent::before {
     top: 0;
     left: 0;
-    border-left: 3px solid var(--green-main);
-    border-right: none;
+    border: none;
     padding: 0rem;
   }
 
