--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -12,11 +12,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
 }
 
 .LeftSectionContent {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
@@ -27,9 +27,10 @@
 .RightSectionContent {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  padding: 2rem;
+  justify-content: space-evenly;
   position: relative;
+  height: 100%;
+  border: 1
 }
 
 .RightSectionContent::before {
