--- a/src/app/components/footer/Footer.module.css
+++ b/src/app/components/footer/Footer.module.css
@@ -6,3 +6,29 @@
     display: flex;
     gap: 1rem;
 }
+
+
+/* Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {}
+
+
+
+/* Mobile */
+@media (max-width: 768px) {
+    .Footer {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .Footer svg {
+        scale: 0.8;
+    }
+}
+
+/* Tablet and Smaller Desktop */
+@media (min-width: 768px) and (max-width: 1120px) {}
