--- a/src/app/components/navbar/Navbar.module.css
+++ b/src/app/components/navbar/Navbar.module.css
@@ -8,6 +8,34 @@
     mix-blend-mode: difference;
 }
 
-.Navbar h3 {
-    transform: translateX(6rem);
+
+
+/* Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {}
+
+
+
+/* Mobile */
+@media (max-width: 768px) {
+
+    .Navbar {
+        position: absolute;
+        width: 100vw;
+        padding: 1rem;
+    }
+
+    .Navbar div {
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: left;
+    }
+
+    .Navbar img {
+        scale: 0.7;
+        left: 10vw;
+    }
 }
+
+/* Tablet and Smaller Desktop */
+@media (min-width: 768px) and (max-width: 1120px) {}
