--- a/src/app/components/navbar/Navbar.module.css
+++ b/src/app/components/navbar/Navbar.module.css
@@ -39,7 +39,7 @@
     .Navbar img {
         scale: 0.7;
         left: 10vw;
-        transform: translateX(-4.5rem);
+        transform: translateX(-16vw);
     }
 }
 
