--- a/src/app/components/acts/Acts.module.css
+++ b/src/app/components/acts/Acts.module.css
@@ -72,16 +72,17 @@
         max-width: 100vw;
         width: 100vw;
         padding: 2rem 0 2rem 0;
+
     }
 
     .Act {
         position: relative;
-        padding: 0.2em 0.2em 0.2em 0;
+        padding: 0.2rem 0.2rem 0.2rem 0.2rem;
         color: var(--font-color);
         display: flex;
         align-items: center;
         flex-direction: row;
-        gap: 0.2em;
+        gap: 0.3rem;
         mix-blend-mode: difference;
     }
 
