--- a/src/app/components/button/Button.module.css
+++ b/src/app/components/button/Button.module.css
@@ -9,12 +9,13 @@
     font-weight: 600;
     text-transform: uppercase;
     padding: 1rem;
-    background-color: var(--black-main);
-    color: var(--greed-main);
+    background-color: black;
+    color: var(--font-color);
     outline: none;
     border: none;
     transition: transform 0.2s cubic-bezier(0.215, 0.610, 0.355, 1);
     overflow: visible;
+    box-shadow: 0px 0px 15px var(--green-main)
 }
 
 .Button:hover {
@@ -144,15 +145,23 @@
 @media (max-width: 768px) {
 
     .ButtonContainer {
-        scale: 0.8;
+        scale: 0.9;
+        transform: translateY(2vh);
     }
 
-    .Button::after {
-        animation: bottomBubbles 1.5s ease-in-out infinite;
-    }
-
-    .Button::before {
-        animation: topBubbles 1.5s ease-in-out infinite;
+    .Button {
+        position: relative;
+        font-size: 1.8rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        padding: 1rem 1.5rem;
+        background-color: black;
+        color: var(--font-color);
+        outline: none;
+        border: none;
+        transition: transform 0.2s cubic-bezier(0.215, 0.610, 0.355, 1);
+        overflow: visible;
+        box-shadow: 0px 0px 15px var(--green-main)
     }
 }
 
