--- a/src/app/components/acts/Acts.module.css
+++ b/src/app/components/acts/Acts.module.css
@@ -16,9 +16,6 @@
     display: flex;
     align-items: center;
     gap: 1em;
-    font-family: "tt-travels-next", sans-serif;
-    font-weight: 400;
-    font-style: normal;
 
 }
 
@@ -37,7 +34,6 @@
 
 .Link {
     width: fit-content;
-    font-weight: 800;
     font-size: 2rem;
 }
 
@@ -47,7 +43,7 @@
     position: absolute;
     top: 0;
     width: fit-content;
-    color: var(--green-main);
+    color: var(--font-color);
     background-color: transparent;
     overflow: hidden;
     clip: rect(1px, 1px, 0, 0);
