--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,15 +6,13 @@
 }
 
 @font-face {
-  font-family: "GT America Medium";
-  src: url("/fonts/GT-America-Expanded-Medium-Trial.otf");
+  font-family: "GT America Black";
+  src: url("/fonts/GT-America-Expanded-Black-Trial.otf");
 }
 
-
-
 @font-face {
-  font-family: "Clash Grotesk";
-  src: url("/fonts/Tanker-Regular.woff2");
+  font-family: "GT America Medium";
+  src: url("/fonts/GT-America-Expanded-Medium-Trial.otf");
 }
 
 :root {
@@ -22,8 +20,7 @@
   --padding: 2em;
   --font-size: 16px;
   --font-color: rgb(245, 245, 245);
-  --title-font: "GT America Bold";
-  --terminal: "Clash Grotesk";
+  --title-font: "GT America Black";
   --black-main: rgb(43, 43, 43);
   --green-main: #CFFB51;
 }
@@ -59,17 +56,17 @@ h5,
 h6,
 button {
   text-transform: uppercase;
-  font-family: "tt-travels-next", sans-serif;
-  font-weight: 900;
-  font-style: normal;
+  /* font-family: "tt-travels-next", sans-serif; */
+  font-family: var(--title-font);
 }
 
 a {
   color: inherit;
   text-decoration: none;
-  font-weight: 800;
   font-size: 1.8rem;
   text-transform: uppercase;
+  font-weight: 600;
+  font-family: var(--title-font);
 
 }
 
