--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -33,16 +33,6 @@
   border: 1
 }
 
-.RightSectionContent::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 20px;
-  height: 20px;
-  border-top: 3px solid var(--green-main);
-  border-right: 3px solid var(--green-main);
-}
 
 .Location {
   margin: 0;
@@ -51,9 +41,6 @@
     color 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955),
     background-color 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
   position: relative;
-  font-family: "tt-travels-next", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   display: flex;
   gap: 2rem;
 }
@@ -65,10 +52,10 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: var(--green-main);
   transform: scaleX(0);
   transition: transform 0.2s ease;
   transform-origin: right;
+  background-color: var(--font-color);
 }
 
 .Location:hover::before {
@@ -77,17 +64,9 @@
 }
 
 .Location:hover {
-  color: var(--green-main);
-  transform: translateX(5px);
+  color: var(--font-color);
 }
 
-.Location:nth-of-type(1):hover svg path {
-  fill: var(--green-main) !important;
-}
-
-.Location:hover svg path[stroke] {
-  stroke: var(--green-main);
-}
 
 .Location a {
   padding: 0.5rem 0;
@@ -95,7 +74,6 @@
   align-items: center;
   gap: 0.5em;
   font-size: 1rem;
-  font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
@@ -108,25 +86,15 @@
   position: relative;
 }
 
-.TitleContainer::after {
-  content: '';
-  position: absolute;
-  bottom: -1rem;
-  left: 0;
-  width: 50%;
-  height: 1px;
-  background-color: var(--green-main);
-}
 
-.Year {
+
+/* .Year {
   font-size: 2.5rem;
-  font-weight: 700;
   letter-spacing: -1px;
   position: relative;
-  margin-left: 1rem;
-}
+} */
 
-.Year::before {
+/* .Year::before {
   content: '';
   position: absolute;
   left: -1rem;
@@ -134,43 +102,34 @@
   height: 100%;
   width: 3px;
   background-color: var(--green-main);
-}
+} */
 
 
 .Date {
   font-size: 3rem;
-  font-weight: 900;
-  color: var(--green-main);
   position: relative;
-  padding-left: 2rem;
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 95% 100%, 0 100%);
-  background-color: rgba(var(--green-main-rgb), 0.1);
-  padding: 0.5rem 1rem;
-  mix-blend-mode: difference;
+  padding: 0.5rem 0;
 }
 
-.Date::before {
+/* .Date::before {
   content: '';
   position: absolute;
   left: 0;
   top: 10%;
   height: 80%;
   width: 3px;
-  background-color: var(--green-main);
-}
+  background-color: var(--font-color);
+} */
 
 .Time {
   font-size: 1.2rem;
-  font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 2px;
   position: relative;
-  padding-right: 20px;
   display: inline-block;
-  transform: translateX(0.5rem)
 }
 
-.Time::before {
+/* .Time::before {
   content: '[';
   color: var(--green-main);
   position: absolute;
@@ -184,7 +143,7 @@
   top: 50%;
   transform: translateY(-50%);
   color: var(--green-main);
-}
+} */
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {}
