--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -69,13 +69,13 @@
 
 
 .Location a {
-  padding: 0.5rem 0;
   display: flex;
   align-items: center;
   gap: 0.5em;
   font-size: 1rem;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  font-family: var(--slim-font);
+  color: white;
 }
 
 .TitleContainer {
@@ -108,7 +108,6 @@
 .Date {
   font-size: 2rem;
   position: relative;
-  padding: 0.5rem 0;
 
 }
 
@@ -123,11 +122,12 @@
 } */
 
 .Time {
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 2px;
   position: relative;
   display: inline-block;
+  font-family: var(--accent-font)
 }
 
 /* .Time::before {
@@ -156,7 +156,7 @@
     min-height: 100vh;
     color: var(--font-color);
     flex-direction: column;
-    padding: 8rem 0 0 0;
+    padding: 5rem 0 0 0;
   }
 
 
@@ -168,8 +168,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 2rem;
+  }
 
+  .Container:nth-of-type(1) {
+    height: 25vh;
   }
 
   .LeftSectionContent {
@@ -185,7 +187,6 @@
     position: relative;
     height: 100%;
     border: 1;
-    transform: translateY(2rem);
   }
 
   .RightSectionContent::before {
@@ -214,18 +215,16 @@
     padding: 0rem;
   }
 
-  .Year::after {
-    right: -2rem;
-  }
+
 
   .Date {
     font-size: 1.8rem;
-    padding: 1rem;
+
   }
 
   .Time {
     font-size: 0.9rem;
-    transform: translateX(0.8rem)
+
   }
 
   .Location {
