--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -44,30 +44,7 @@
   gap: 2rem;
 }
 
-.Location::before {
-  content: '';
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  transform: scaleX(0);
-  transition: transform 0.2s ease;
-  transform-origin: right;
-  background-color: var(--font-color);
-}
-
-.Location:hover::before {
-  transform: scaleX(1);
-  transform-origin: left;
-}
-
-.Location:hover {
-  color: var(--font-color);
-}
-
-
-.Location a {
+.Location a:nth-of-type(1) {
   display: flex;
   align-items: center;
   gap: 0.5em;
@@ -75,6 +52,24 @@
   text-transform: uppercase;
   font-family: var(--slim-font);
   color: white;
+}
+
+.Location a:nth-of-type(1)::before {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  transform: scaleX(1);
+  transition: transform 0.2s ease;
+  transform-origin: right;
+  background-color: var(--font-color);
+}
+
+.Location a:nth-of-type(1):hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 .TitleContainer {
