--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -30,6 +30,7 @@
   justify-content: space-evenly;
   position: relative;
   height: 100%;
+
 }
 
 
@@ -78,15 +79,10 @@
   gap: 1rem;
   align-items: flex-start;
   position: relative;
+  border-left: 1px solid white;
+  padding-left: 2rem;
 }
 
-
-
-/* .Year {
-  font-size: 2.5rem;
-  letter-spacing: -1px;
-  position: relative;
-} */
 
 /* .Year::before {
   content: '';
@@ -115,10 +111,10 @@
   background-color: var(--font-color);
 } */
 
-.Time {
+.Time,
+.Year {
   font-size: 1rem;
   text-transform: uppercase;
-  letter-spacing: 2px;
   position: relative;
   display: inline-block;
   font-family: var(--slim-font)
