--- a/src/app/components/acts/Acts.module.css
+++ b/src/app/components/acts/Acts.module.css
@@ -21,8 +21,8 @@
 
 .Link {
     width: fit-content;
-    font-size: 2rem;
-    font-family: var(--slim-font)
+    font-size: 1.8rem;
+    font-family: var(--title-font)
 }
 
 .Link::after,
