--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -199,11 +199,12 @@
     gap: 0.3rem;
     align-items: flex-start;
     position: relative;
+    border-left: 1px solid transparent;
 
   }
 
   .Year {
-    font-size: 1.4rem;
+    font-size: 0.9rem;
     padding: 0rem;
   }
 
