--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -81,7 +81,6 @@
   align-items: flex-start;
   position: relative;
   border-left: 1px solid white;
-  padding-left: 2rem;
 }
 
 
@@ -175,6 +174,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
     position: relative;
     height: 100%;
     gap: 1rem;
@@ -200,12 +201,12 @@
     align-items: flex-start;
     position: relative;
     border-left: 1px solid transparent;
-
   }
 
   .Year {
     font-size: 0.9rem;
     padding: 0rem;
+    width: 100%;
   }
 
 
@@ -217,7 +218,7 @@
 
   .Time {
     font-size: 0.9rem;
-
+    width: 100%;
   }
 
   .Location {
@@ -249,7 +250,7 @@
   .RightSectionContent {
     border-left: 3px solid var(--green-main);
     border-top: none;
-    padding: 2rem;
+    padding: 0;
   }
 
   .RightSectionContent::before {
@@ -264,7 +265,7 @@
   }
 
   .Year::after {
-    right: -4rem;
+    right: 0;
   }
 
   .Date {
