--- a/src/app/components/Logo.module.css
+++ b/src/app/components/Logo.module.css
@@ -40,6 +40,10 @@
         scale: 0.6;
     }
 
+    .LogoTwo {
+        transform: translateX(50vw)
+    }
+
     .Logo {
         visibility: hidden;
     }
