--- a/src/app/components/button/Button.module.css
+++ b/src/app/components/button/Button.module.css
@@ -1,5 +1,5 @@
 .ButtonContainer {
-    background-color: transparent;
+
     width: fit-content;
 }
 
@@ -7,8 +7,8 @@
     position: relative;
     font-size: 2rem;
     text-transform: uppercase;
-    padding: 1rem 1.2rem;
     background-color: transparent;
+    padding: 1rem 1.2rem;
     color: var(--font-color);
     outline: none;
     border: none;
@@ -17,8 +17,9 @@
     border: 1px solid var(--font-color);
     border-radius: 40px;
     backdrop-filter: blur(10px);
-    background-color: rgba(0, 0, 0, 0.7);
-    font-family: var(--title-font)
+    font-family: var(--title-font);
+
+
 }
 
 .Button:hover {
@@ -26,119 +27,6 @@
     transform: scale(1.05);
 }
 
-.Button::before,
-.Button::after {
-    content: "";
-    position: absolute;
-    height: 70%;
-    width: 150%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-repeat: no-repeat;
-    pointer-events: none;
-    background-size: 0% 0%;
-
-}
-
-.Button::before {
-    top: -45%;
-    z-index: -1;
-    background-image:
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg");
-    background-position: center 160%;
-    background-repeat: no-repeat;
-}
-
-/* .Button:hover::before {
-    animation: topBubbles 1.5s ease-in-out;
-} */
-
-.Button::after {
-    bottom: -45%;
-    background-image:
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg"),
-        url("../../../../public/logo.svg");
-
-    background-position: center -60%;
-    background-repeat: no-repeat;
-}
-
-/* .Button:hover::after {
-    animation: bottomBubbles 1.5s ease-in-out;
-} */
-
-@keyframes topBubbles {
-    0% {
-        background-position: center 160%, center 160%, center 160%, center 160%, center 160%, center 160%,
-            center 160%, center 160%, center 160%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%,
-            0% 0%, 0% 0%;
-    }
-
-    50% {
-        background-position: 30% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%,
-            50% 50%, 65% 20%, 90% 30%;
-        background-size: 55% 55%, 30% 30%, 45% 45%, 60% 60%, 48% 48%, 30% 30%, 35% 35%,
-            20% 20%, 28% 28%;
-    }
-
-    100% {
-        background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%,
-            50% 40%, 65% 10%, 90% -20%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%,
-            0% 0%, 0% 0%;
-    }
-}
-
-@keyframes bottomBubbles {
-    0% {
-        background-position: center -60%, center -60%, center -60%, center -60%, center -60%, center -60%,
-            center -60%, center -60%, center -60%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%,
-            0% 0%, 0% 0%;
-    }
-
-    50% {
-        background-position: 0% 30%, 0% 80%, 10% 60%, 20% 100%, 30% 70%, 22% 50%,
-            50% 50%, 65% 80%, 90% 70%;
-        background-size: 55% 55%, 30% 30%, 45% 45%, 60% 60%, 48% 48%, 30% 30%, 35% 35%,
-            20% 20%, 28% 28%;
-    }
-
-    100% {
-        background-position: 0% 40%, 0% 90%, 10% 70%, 20% 110%, 30% 80%, 22% 60%,
-            50% 60%, 65% 90%, 90% 120%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%,
-            0% 0%, 0% 0%;
-    }
-}
 
 
 /* Enable hover only on non-touch devices */
