--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,8 +21,12 @@
   justify-content: center;
   height: 100%;
   width: 100%;
+  position: relative;
+  flex-direction: column;
 
 }
+
+.ShirtContainer {}
 
 .RightSectionContent {
   display: flex;
@@ -66,7 +70,6 @@
   transform: scaleX(1);
   transition: transform 0.2s ease;
   transform-origin: right;
-  background-color: var(--font-color);
 }
 
 .Location a:nth-of-type(1):hover::before {
@@ -83,32 +86,11 @@
 }
 
 
-/* .Year::before {
-  content: '';
-  position: absolute;
-  left: -1rem;
-  top: 0;
-  height: 100%;
-  width: 3px;
-  background-color: var(--green-main);
-} */
-
-
 .Date {
   font-size: 2rem;
   position: relative;
 
 }
-
-/* .Date::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 10%;
-  height: 80%;
-  width: 3px;
-  background-color: var(--font-color);
-} */
 
 .Time,
 .Year {
@@ -119,21 +101,7 @@
   font-family: var(--slim-font)
 }
 
-/* .Time::before {
-  content: '[';
-  color: var(--green-main);
-  position: absolute;
-  left: -10px;
-}
 
-.Time::after {
-  content: ']';
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: var(--green-main);
-} */
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {}
@@ -148,8 +116,6 @@
     padding: 5rem 0 0 0;
   }
 
-
-
   .Container {
     padding: 0rem;
     width: 100%;
@@ -160,7 +126,7 @@
   }
 
   .Container:nth-of-type(1) {
-    height: 25vh;
+    height: 45vh;
   }
 
   .LeftSectionContent {
