--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -113,7 +113,7 @@
     min-height: 100vh;
     color: var(--font-color);
     flex-direction: column;
-    padding: 8rem 0 0 0;
+    padding: 8rem 0 2rem 0;
   }
 
   .Container {
