--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -60,6 +60,16 @@
   color: white;
 }
 
+.Location a:nth-of-type(2) {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-family: var(--slim-font);
+  color: white;
+}
+
 .Location a:nth-of-type(1)::before {
   content: '';
   position: absolute;
